--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "petF",
-    "slug": "petF",
+    "name": "petfriend",
+    "slug": "petfriend",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
